Cases update and favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,300;0,400;0,500;0,900;1,300;1,400;1,500;1,900&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <header>
@@ -78,27 +78,47 @@
           <p class="casesTit">CASES</p>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case1bg">
-              <img class="caseImg" src="./images/cases/1_ourhouse powered.svg" alt="Ourhouse Powered">
-              <img class="caseImg" src="./images/cases/1_logodeutsche.svg" alt="Deutsche">
-              <p class="caseTxt">Social production & planning + <br> TikTok advertising</p>
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/1_ourhouse powered.svg" alt="Ourhouse Powered">
+                <img class="caseImg" src="./images/cases/1_logodeutsche.svg" alt="Deutsche">
+              </div>
+              <p class="caseTxt">Social production & planning + TikTok advertising</p>
+              <div class="caseBtnCont">
+                <a href="https://freedombmx.de/top-stories/our-house-bmx-summer-trip-2021.html" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case2bg">
-              <img class="caseImg" src="./images/cases/2_kinetica.svg" alt="Kinetica">
-              <p class="caseTxt">Partnership activation, social planning <br> and Copywriting</p>
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/2_kinetica.svg" alt="Kinetica">
+              </div>
+              <p class="caseTxt">Partnership activation, social planning and Copywriting</p>
+              <div class="caseBtnCont">
+                <a href="https://www.instagram.com/reel/CSw4kmzFPy3/" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case3bg">
-              <img class="caseImg" src="./images/cases/3_LiftYourVision_round.svg" alt="Lift Your Vision">
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/3_LiftYourVision_round.svg" alt="Lift Your Vision">
+              </div>
               <p class="caseTxt">Comms & Social</p>
+              <div class="caseBtnCont">
+                <a href="https://www.horizont.net/video/Lift-your-Vision---Friends-of-the-brand-33933" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case4bg">
-              <img class="caseImg" src="./images/cases/4_logo_distorted.svg" alt="Distorted">
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/4_logo_distorted.svg" alt="Distorted">
+              </div>
               <p class="caseTxt">Influencer Content</p>
+              <div class="caseBtnCont">
+                <a href="https://www.tiktok.com/@dj.donovan/video/7077195833111858438" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
@@ -108,24 +128,64 @@
                 <img class="caseImg" src="./images/cases/4_logo_distorted.svg" alt="Distorted">
               </div>
               <p class="caseTxt">Conception & Activation</p>
+              <div class="caseBtnCont">
+                <a href="https://www.distortedpeople.com/pages/dazn" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case6bg">
-              <img class="caseImg" src="./images/cases/5_logo_dazn.svg" alt="DAZN">
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/5_logo_dazn.svg" alt="DAZN">
+              </div>  
               <p class="caseTxt">Social Media and Marketing activations</p>
+              <div class="caseBtnCont">
+                <a href="https://www.youtube.com/watch?v=ivYhF7l0OnM" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases">
             <div class="caseBg" id="case7bg">
-              <img class="caseImg" src="./images/cases/7_logoadidas.svg" alt="Adidas">
-              <p class="caseTxt">Social Activation with <br> Pascal Gurk & Benny Henrichs</p>
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/7_logoadidas.svg" alt="Adidas">
+              </div>
+              <p class="caseTxt">Social Activation with Pascal Gurk & Benny Henrichs</p>
+              <div class="caseBtnCont">
+                <a href="https://www.tiktok.com/@bennyhenrichs/video/7083197175844424966" target="_blank">View</a>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 cases casesLast">
             <div class="caseBg" id="case8bg">
-              <img class="caseImg" src="./images/cases/8_sbam.svg" alt="Sbam">
-              <p class="caseTxt">Comms, Marketing activation & <br> video production</p>
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/8_sbam.svg" alt="Sbam">
+              </div>
+              <p class="caseTxt">Comms, Marketing activation & video production</p>
+              <div class="caseBtnCont">
+                <a href="https://www.youtube.com/watch?v=O2156V8vdLQ" target="_blank">View</a>
+              </div>
+            </div>
+          </div>  
+          <div class="col-lg-6 col-md-6 cases casesLast">
+            <div class="caseBg" id="case9bg">
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/9_logomagenta.svg" alt="Magenta">
+              </div>
+              <p class="caseTxt">Reaction Show</p>
+              <div class="caseBtnCont">
+                <a href="#">View</a>
+              </div>
+            </div>
+          </div>   
+          <div class="col-lg-6 col-md-6 cases casesLast">
+            <div class="caseBg" id="case10bg">
+              <div class="caseImgCont">
+                <img class="caseImg" src="./images/cases/10_logoaudible.svg" alt="Audible">
+              </div>
+              <p class="caseTxt">Social Media</p>
+              <div class="caseBtnCont">
+                <a href="#">View</a>
+              </div>
             </div>
           </div>                              
         </div>
